RESOLVED FIXED318854
Fix css/css-overflow/parsing/webkit-box-computed.html
https://bugs.webkit.org/show_bug.cgi?id=318854
Summary Fix css/css-overflow/parsing/webkit-box-computed.html
Rob Buis
Reported 2026-07-08 02:48:38 PDT
Fix css/css-overflow/parsing/webkit-box-computed.html.
Attachments
Rob Buis
Comment 1 2026-07-08 02:58:10 PDT
Radar WebKit Bug Importer
Comment 2 2026-07-15 02:49:11 PDT
EWS
Comment 3 2026-08-18 07:22:41 PDT
Committed 319370@main (9425389db654): <https://commits.webkit.org/319370@main> Reviewed commits have been landed. Closing PR #68902 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.