Fix css/css-overflow/parsing/webkit-box-computed.html https://bugs.webkit.org/show_bug.cgi?id=318854

Reviewed by Alan Baradlay.

Implement computed value rules for display for certain combinations
of the continue and -webkit-box-orient properties [1].

[1] https://bugs.webkit.org/show_bug.cgi?id=318854

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/parsing/webkit-box-computed-expected.txt:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Canonical link: https://commits.webkit.org/319370@main